Small updates on T440P article

--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -19,7 +19,7 @@ But lets start with the hardware upgrades I did to push the notebook through the
 I used [this guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#buying-a-unit) as reference for most of the hardware upgrades.
 
 ### Display
-Since my Notebook came with the standard 1366x768 TN Panel I upgraded to the ***Innolux N140HCE-EN1 Rev. C2*** for around 75 €. The seller shipped the wrong panel, but after a dispute I got the right one. The new display is a pleasure and would be the #1 recommendation for a single upgrade I would do. The upgrade is very easy and well documented.
+Since my Notebook came with the standard 1366x768 TN Panel. I upgraded to the Innolux N140HCE-EN1 Rev. C2 for around 75 €. Full HD and IPS are well worth the money. The seller first shipped the wrong panel, but after a dispute I got the right one. The new display is a pleasure and would be the #1 recommendation for a single upgrade I would do. The upgrade is very easy and well documented.
 <!-- ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-display.jpeg) -->
 
 ### CPU
@@ -40,7 +40,7 @@ For the WiFi Card I switched to a Killer Wireless-AC 1535 which I a had purchase
 
 The single most important upgrade for me was the display. An IPS Panel with FullHD is gorgeous.
 
-In total I paid around 450 € including shipping. You get somehow attached to a piece of hardware once you start customising 
+In total I paid around 450 € including shipping. You get somehow attached to a piece of hardware once you start customising, so the value for me is far greater.
 
 | Component | Price
 |-|:-|
@@ -59,6 +59,8 @@ Here is a picture from inside.
 
 ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-hardware-recap.jpeg)
 
+If I could I would change the webcam to a 1080p version and retrofit a Wacom Digitizer. But I am dreaming again.
+
 ## Configuration
 --------------
 
@@ -71,7 +73,7 @@ TBD
 
 [Lenovo Thinkpad T440p Upgrade Guide](https://gitlab.com/seiba/thinkpad-t440p-upgrade-guide/-/tree/master/docs) by Joshua Lay on Gitlab
 
-[Articel on removing the WiFi Whitelist](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on Wolfgang's Blog
+[Article on removing the WiFi Whitelist](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on Wolfgang's Blog
 
 [Undervolt Utility](https://github.com/georgewhewell/undervolt) by Georgwhewell on Github
 
