Small changed + Gif to WebM

--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -19,38 +19,43 @@ But lets start with the hardware upgrades I did to push the notebook through the
 I used [this guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#buying-a-unit) as reference for most of the hardware upgrades.
 
 ### Display
-Since my Notebook came with the standard 1366x768 TN Panel. I upgraded to the Innolux N140HCE-EN1 Rev. C2 for around 75 €. Full HD and IPS are well worth the money. The seller first shipped the wrong panel, but after a dispute I got the right one. The new display is a pleasure and would be the #1 recommendation for a single upgrade I would do. The upgrade is very easy and well documented.
+Since my Notebook came with the standard 1366x768 TN Panel. I upgraded to the ***Innolux*** N140HCE-EN1 Rev. C2 for around 75 €. ***Full HD IPS*** are well worth the money. The Aliexpress seller first shipped the wrong panel, but after a dispute I got the right one. The new display is a pleasure and would be the #1 recommendation for a single upgrade I would do. The upgrade is very easy and well documented.
 <!-- ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-display.jpeg) -->
 
 ### CPU
 I switched to the ***i7-4700MQ*** with a TDP of 47 W and max. Clock. of 3,4 GHz. I would have gone for the 4702MQ or the 4712MQ but they were overpriced at the time. To handle the heat dissipation I used [Grizzly Thermal Conductonaut](https://www.thermal-grizzly.com/en/products/26-conductonaut-en). With its thermal conductivity of 73 W/mK it is one of the best, but since it is electrically conductive I used nailpolish to seal the surroundings. On Idle I get around 50-55 °C which is approximately 5 °C less then before switching to liquid metal. Under full load it goes as high as 77-80 °C at a Clockspeed of 3 GHz. I am using unvervolt to reduce some voltages a little. More on that later. In the BIOS there is a hidden option to cap the longtime powerlimit at 37 W. To get around this you need to modify the BIOS. See the configuration part for that.
 
-![T440P Display Upgrade](/assets/img/uploads/t440p/t440p_liquid_metal.gif)
+<!-- ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p_liquid_metal.gif) -->
+
+<video autoplay loop muted>
+  <source src="/assets/img/uploads/t440p/t440p_liquid_metal.webm" type="video/webm">
+  Your browser does not support the video tag.
+</video>
 
 ### WiFi AC
-For the WiFi Card I switched to a Killer Wireless-AC 1535 which I a had purchased a while ago for cheap. Since the T440P BIOS comes with a ***WiFi Whitelist*** it must be removed via a BIOS patch. More on that later.
+For the WiFi Card I switched to a Killer Wireless-AC 1535 which I a had purchased a while ago for cheap. Since the T440P BIOS comes with a ***WiFi Whitelist*** which must be removed via a BIOS patch. More on that later. Actually this Killer WiFi Card is base on a Qualcomm Atheros QCA6174 802.11ac with slightly modified firmware. Not sure if it makes any differnce in speed, I just had it lying around.
 
 ### Small Hardware Upgrades
 * I installed 16 GB of used DDR3 SO-DIMM RAM.
 * I switched the keyboard since my device came with the wrong layout and no backlighting. I bought the keyboard for around 25 € and sold my old for around 15 €.
 * I switched to the T450s touchpad. It was around 15 €. Nothing to comment here.
-* Using a SSD/HDD caddy I swapped the DVD Drive for a an old SSD I had lying around. The main drive was already a solid state drive.
+* Using a SSD/HDD caddy I swapped the DVD Drive for an old SSD I had lying around. The main drive was already a solid state drive.
 
 ### Hardware Recap
 
 The single most important upgrade for me was the display. An IPS Panel with FullHD is gorgeous.
 
-In total I paid around 450 € including shipping. You get somehow attached to a piece of hardware once you start customising, so the value for me is far greater.
+In total I paid around 450 € including shipping. You get somehow attached to a piece of hardware once you start customising.
 
 | Component | Price
 |-|:-|
-| `ThinkPad T440P` | 175 €
-| `Display` | 75 €
-| `CPU Upgrade` | 85 €
-| `WiFi Upgrade` | 10 €
-| `RAM Upgrade` | 55 €
-| `Keyboard Upgrade` | 10 €
-| `Touchpad` | 15 €
+| `ThinkPad T440P (Core i5-4300M, 8 GB RAM, 3G)` | 175 €
+| `Display (Innolux 1080P IPS)` | 75 €
+| `CPU Upgrade (Core i7-4700MQ)` | 85 €
+| `WiFi Upgrade (Killer Wireless-AC 1535)` | 10 €
+| `RAM Upgrade (HYNIX 2x8 GB 1600 Mhz` | 55 €
+| `Keyboard Upgrade (DE-ISO Backlit)` | 10 €
+| `Touchpad (T450S)` | 15 €
 | `ODD/SSD Adapter` | 9 €
 | |
 | `Total` | 449 €
@@ -59,19 +64,43 @@ Here is a picture from inside.
 
 ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-hardware-recap.jpeg)
 
-If I could I would change the webcam to a 1080p version and retrofit a Wacom Digitizer. But I am dreaming again.
+If I could I would change the webcam to a 1080p version and retrofit a Wacom Digitizer.
 
 ## Configuration
 --------------
 
-TBD
+### BIOS Patch
+
+TDP and WiFi Whitelist
+
+### Pop!OS
+
+~~~
+sudo apt update
+sudo apt upgrade
+sudo apt dist-upgrade
+sudo apt autoremove
+sudo apt autoclean
+sudo fwupdmgr get-devices
+sudo fwupdmgr get-updates
+sudo fwupdmgr update
+sudo reboot now
+~~~
+
+### tlp
+
+### undervolt
+
+### gnome shell extensions
+
+### 
 
 ## Links
 --------------
 
 [Thinkpad T440p Ultimate Buyer's Guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#cpu) on Octoperf.com
 
-[Lenovo Thinkpad T440p Upgrade Guide](https://gitlab.com/seiba/thinkpad-t440p-upgrade-guide/-/tree/master/docs) by Joshua Lay on Gitlab
+[Lenovo Thinkpad T440p Upgrade Guide](https://seiba.gitlab.io/thinkpad-t440p-upgrade-guide/) by Joshua Lay on Gitlab
 
 [Article on removing the WiFi Whitelist](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on Wolfgang's Blog
 
