--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -68,6 +68,7 @@ If I could I would change the webcam to a 1080p version and retrofit a Wacom Dig
 --------------
 
 TBD
+
 <!-- 
 ### BIOS Patch
 
@@ -91,9 +92,8 @@ sudo reboot now
 
 ### undervolt
 
-### gnome shell extensions
+### gnome shell extensions -->
 
-###  -->
 
 ## Links
 --------------
