New arcticel on Yunohost and Linode

--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -14,8 +14,9 @@ My ideal device would be the upgradeability of the [Framework Notebook](https://
 So it's 2021 and I am still on an old T440P I bought used for around 170 €. I am still quite happy, the only bummer is the poor battery life. On a 6-Cell Battery I get around of 2-3 hours of usage.<br><br >
 But lets start with the hardware upgrades I did to push the notebook through the years.
 
-## Hardware Upgrades
 --------------
+## Hardware Upgrades
+
 I used [this guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#buying-a-unit) as reference for most of the hardware upgrades.
 
 ### Display
@@ -64,17 +65,19 @@ Here is a picture from inside.
 
 If I could I would change the webcam to a 1080p version and retrofit a Wacom Digitizer.
 
-## Configuration
 --------------
+## Configuration
 
-TBD
-
-<!-- 
 ### BIOS Patch
+As mentioned above to get rid of the WiFi Whitelist and to raise the longtime powerlimit you need to patch the BIOS. The best guide to do this is a [video](https://www.youtube.com/watch?v=ce7kqUEccUM) on [Wolfgang's Channel](https://www.youtube.com/channel/UCsnGwSIHyoYN0kiINAGUKxg) with the [corresponding articel](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on his blog.
 
-TDP and WiFi Whitelist
+The prozess looks more risky than it is and is very well documented on his blog.
 
-### Pop!OS
+![BIOS Patch](/assets/img/uploads/t440p/t440p-bios.jpeg)
+
+### Pop!_OS first steps
+
+I decided to give Pop!_OS a try. First steps after installation is to do the nescessary OS and firmware updates.
 
 {% highlight shell %}
 sudo apt update
@@ -87,6 +90,10 @@ sudo fwupdmgr get-updates
 sudo fwupdmgr update
 sudo reboot now
 {% endhighlight %}
+
+After the reboot ist complete we will continue with finetuning and improve the battery life.
+
+<!-- 
 
 ### tlp
 
