--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -93,6 +93,13 @@ sudo reboot now
 
 After the reboot ist complete we will continue with finetuning and improve the battery life.
 
+## ToDo
+--------------
+
+1. TLP
+2. Undervolt
+3. Gnome Shell Extensions
+
 <!-- 
 
 ### tlp
