--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -7,7 +7,7 @@ date: '2021-04-25 08:32:00'
 categories: Lenovo T440P Thinkpad Notebook Linux misc
 ---
 
-Here is my turn on a ***T440P upgrade and configuration guide***. I know it's 2021 and a device from 2013 might not appeal very sexy, but it does. In the time owning the T440P I bought a Razer Blade 15 (2018) and a Microsoft Surface Pro 7. The Razer Blade had hardware quirks (SSD working unreliably) and some hardware was not well supported under Linux. The Surface Pro I bought as a replacement for the Razer Blade had no Pen and Camera support, even with custom kernel. ([Read more on that](https://github.com/linux-surface/linux-surface/wiki/Supported-Devices-and-Features#feature-matrix))
+Here is my turn on a ***T440P upgrade and configuration guide***. I know it's 2021 and a device from 2013 might not appeal very sexy, but it is. In the time owning the T440P I bought a Razer Blade 15 (2018) and a Microsoft Surface Pro 7. The Razer Blade had hardware quirks (SSD working unreliably) and some hardware was not well supported under Linux. The Surface Pro I bought as a replacement for the Razer Blade had no Pen and Camera support, even with custom kernel. ([Read more on that](https://github.com/linux-surface/linux-surface/wiki/Supported-Devices-and-Features#feature-matrix))
 
 My ideal device would be the upgradeability of the [Framework Notebook](https://frame.work/) as a stylus convertible with a current Zen 3 Ryzen. The cherry on top would be a 120 Hz 1080p panel and in a case like the ThinkPad L13 Yoga. I am dreaming...
 
