--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -24,7 +24,7 @@ Since my Notebook came with the standard 1366x768 TN panel, I upgraded it to the
 <!-- ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-display.jpeg) -->
 
 ### CPU
-I switched to the ***i7-4700MQ*** with a TDP of 47 W and max. clock. of 3.4 GHz. I would have gone for the 4702MQ or the 4712MQ but they were overpriced at the time. To handle the heat dissipation I used [Grizzly Thermal Conductonaut](https://www.thermal-grizzly.com/en/products/26-conductonaut-en). With its thermal conductivity of 73 W/mK it is one of the best, but since it is electrically conductive, I used nailpolish to seal the surroundings. On Idle I get around 50-55 °C, which is approximately 5 °C less then before switching to liquid metal. Under full load it goes as high as 77-80 °C at a clock speed of 3 GHz. I am using undvervolt to reduce some voltages a little. More on that later. In the BIOS there is a hidden option to cap the longtime power limit at 37 W. To get around this you need to modify the BIOS. See the configuration part for that.
+I switched to the ***i7-4700MQ*** with a TDP of 47 W and max. clock. of 3.4 GHz. I would have gone for the 4702MQ or the 4712MQ but they were overpriced at the time. To handle the heat dissipation I used [Thermal Grizzly Conductonaut](https://www.thermal-grizzly.com/en/products/26-conductonaut-en). With its thermal conductivity of 73 W/mK it is one of the best, but since it is electrically conductive, I used nailpolish to seal the surroundings. On Idle I get around 50-55 °C, which is approximately 5 °C less then before switching to liquid metal. Under full load it goes as high as 77-80 °C at a clock speed of 3 GHz. I am using undvervolt to reduce some voltages a little. More on that later. In the BIOS there is a hidden option to cap the longtime power limit at 37 W. To get around this you need to modify the BIOS. See the configuration part for that.
 
 <video autoplay loop muted>
   <source src="/assets/img/uploads/t440p/t440p_liquid_metal.webm" type="video/webm">
