Articel Name changed

--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Ultimate Guide for the ThinkPad T440P
+title: My ThinkPad T440P
 meta_description: My personal T440P
 author: malte_sanders
 date: '2021-04-25 08:32:00'
