--- a/_posts/2021-04-25-thinkpad-t440p.md
+++ b/_posts/2021-04-25-thinkpad-t440p.md
@@ -7,9 +7,9 @@ date: '2021-04-25 08:32:00'
 categories: Lenovo T440P Thinkpad Notebook Linux misc
 ---
 
-Here is my turn on a ***T440P upgrade and configuration guide***. I know it's 2021 and a device from 2013 might not appeal very sexy, but it is. In the time owning the T440P I bought a Razer Blade 15 (2018) and a Microsoft Surface Pro 7. The Razer Blade had hardware quirks (SSD working unreliably) and some hardware was not well supported under Linux. The Surface Pro I bought as a replacement for the Razer Blade had no Pen and Camera support, even with custom kernel. ([Read more on that](https://github.com/linux-surface/linux-surface/wiki/Supported-Devices-and-Features#feature-matrix))
+Here is my turn on a ***T440P upgrade and configuration guide***. I know it's 2021 and a device from 2013 might not appeal very sexy, but it is. In the time owning the T440P I bought a Razer Blade 15 (2018) and a Microsoft Surface Pro 7. The Razer Blade had hardware quirks (SSD working unreliably) and some hardware was not well supported under Linux. The Surface Pro I bought as a replacement for the Razer Blade had no Pen and Camera support, even with custom kernel. ([Read more on that](https://github.com/linux-surface/linux-surface/wiki/Supported-Devices-and-Features#feature-matrix){:target="_blank"})
 
-My ideal device would be the upgradeability of the [Framework Notebook](https://frame.work/) as a stylus convertible with a current Zen 3 Ryzen. The cherry on top would be a 120 Hz 1080p panel and in a case like the ThinkPad L13 Yoga. I am dreaming...
+My ideal device would be the upgradeability of the [Framework Notebook](https://frame.work/){:target="_blank"} as a stylus convertible with a current Zen 3 Ryzen. The cherry on top would be a 120 Hz 1080p panel and in a case like the ThinkPad L13 Yoga. I am dreaming...
 
 So it's 2021 and I am still on an old T440P I bought used for around 170 €. I am still quite happy, the only bummer is the poor battery life. On a 6-Cell battery I get around of 2-3 hours of usage.<br><br>
 But lets start with the hardware upgrades I did to push the notebook through the years.
@@ -17,14 +17,14 @@ But lets start with the hardware upgrades I did to push the notebook through the
 --------------
 ## Hardware Upgrades
 
-I used [this guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#buying-a-unit) as reference for most of the hardware upgrades.
+I used [this guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#buying-a-unit){:target="_blank"} as reference for most of the hardware upgrades.
 
 ### Display
 Since my Notebook came with the standard 1366x768 TN panel, I upgraded it to the ***Innolux*** N140HCE-EN1 Rev. C2 for around 75 €. ***Full HD IPS*** are well worth the money. The Aliexpress seller first shipped the wrong panel, but after a dispute I got the right one. The new display is a pleasure and would be the #1 recommendation for a single upgrade I would do. The upgrade is very easy and well documented.
 <!-- ![T440P Display Upgrade](/assets/img/uploads/t440p/t440p-display.jpeg) -->
 
 ### CPU
-I switched to the ***i7-4700MQ*** with a TDP of 47 W and max. clock. of 3.4 GHz. I would have gone for the 4702MQ or the 4712MQ but they were overpriced at the time. To handle the heat dissipation I used [Thermal Grizzly Conductonaut](https://www.thermal-grizzly.com/en/products/26-conductonaut-en). With its thermal conductivity of 73 W/mK it is one of the best, but since it is electrically conductive, I used nailpolish to seal the surroundings. On Idle I get around 50-55 °C, which is approximately 5 °C less then before switching to liquid metal. Under full load it goes as high as 77-80 °C at a clock speed of 3 GHz. I am using undvervolt to reduce some voltages a little. More on that later. In the BIOS there is a hidden option to cap the longtime power limit at 37 W. To get around this you need to modify the BIOS. See the configuration part for that.
+I switched to the ***i7-4700MQ*** with a TDP of 47 W and max. clock. of 3.4 GHz. I would have gone for the 4702MQ or the 4712MQ but they were overpriced at the time. To handle the heat dissipation I used [Thermal Grizzly Conductonaut](https://www.thermal-grizzly.com/en/products/26-conductonaut-en){:target="_blank"}. With its thermal conductivity of 73 W/mK it is one of the best, but since it is electrically conductive, I used nailpolish to seal the surroundings. On Idle I get around 50-55 °C, which is approximately 5 °C less then before switching to liquid metal. Under full load it goes as high as 77-80 °C at a clock speed of 3 GHz. I am using undvervolt to reduce some voltages a little. More on that later. In the BIOS there is a hidden option to cap the longtime power limit at 37 W. To get around this you need to modify the BIOS. See the configuration part for that.
 
 <video autoplay loop muted>
   <source src="/assets/img/uploads/t440p/t440p_liquid_metal.webm" type="video/webm">
@@ -69,7 +69,7 @@ If I could, I would change the webcam to a 1080p version and retrofit a Wacom Di
 ## Configuration
 
 ### BIOS Patch
-As mentioned above to get rid of the WiFi Whitelist and to raise the longtime powerlimit you need to patch the BIOS. The best guide to do this is a [video](https://www.youtube.com/watch?v=ce7kqUEccUM) on [Wolfgang's Channel](https://www.youtube.com/channel/UCsnGwSIHyoYN0kiINAGUKxg) with the [corresponding articel](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on his blog.
+As mentioned above to get rid of the WiFi Whitelist and to raise the longtime powerlimit you need to patch the BIOS. The best guide to do this is a [video](https://www.youtube.com/watch?v=ce7kqUEccUM){:target="_blank"} on [Wolfgang's Channel](https://www.youtube.com/channel/UCsnGwSIHyoYN0kiINAGUKxg){:target="_blank"} with the [corresponding articel](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html){:target="_blank"} on his blog.
 
 The prozess looks more risky than it is and is very well documented on his blog.
 
@@ -112,12 +112,12 @@ After the reboot ist complete we will continue with finetuning and improve the b
 ## Links
 --------------
 
-[Thinkpad T440p Ultimate Buyer's Guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#cpu) on Octoperf.com
+[Thinkpad T440p Ultimate Buyer's Guide](https://octoperf.com/blog/2018/11/07/thinkpad-t440p-buyers-guide/#cpu){:target="_blank"} on Octoperf.com
 
-[Lenovo Thinkpad T440p Upgrade Guide](https://seiba.gitlab.io/thinkpad-t440p-upgrade-guide/) by Joshua Lay on Gitlab
+[Lenovo Thinkpad T440p Upgrade Guide](https://seiba.gitlab.io/thinkpad-t440p-upgrade-guide/){:target="_blank"} by Joshua Lay on Gitlab
 
-[Article on removing the WiFi Whitelist](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html) on Wolfgang's Blog
+[Article on removing the WiFi Whitelist](https://notthebe.ee/Removing-the-Wi-Fi-Whiteslit-on-Haswell-Thinkpads-T440p-W540-T540-etc.html){:target="_blank"} on Wolfgang's Blog
 
-[Undervolt Utility](https://github.com/georgewhewell/undervolt) by Georgwhewell on Github
+[Undervolt Utility](https://github.com/georgewhewell/undervolt){:target="_blank"} by Georgwhewell on Github
 
-[Things to do after installing Pop!_OS 20.04 (Apps, Settings, and Tweaks)](https://mutschler.eu/linux/install-guides/pop-os-post-install/) by Willi Mutschler
+[Things to do after installing Pop!_OS 20.04 (Apps, Settings, and Tweaks)](https://mutschler.eu/linux/install-guides/pop-os-post-install/){:target="_blank"} by Willi Mutschler
